--- a/NopCommerce_BDD_Cucumber_Maven_Project/test-output/old/Default suite/methods.html
+++ b/NopCommerce_BDD_Cucumber_Maven_Project/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c1a3bc">  <td>24/07/12 05:10:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testrunner.Runner@130c12b7]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@725680028</td>   <td></td> </tr>
-<tr bgcolor="c1a3bc">  <td>24/07/12 05:10:06</td>   <td>-173</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:testrunner.Runner@130c12b7]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@725680028</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>24/07/14 01:13:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:testrunner.CucumberTestRunners@1ca3b418]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1551446957</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>24/07/14 01:13:48</td>   <td>6912</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:testrunner.CucumberTestRunners@1ca3b418]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1551446957</td>   <td></td> </tr>
+<tr bgcolor="d4f8f5">  <td>24/07/14 01:13:41</td>   <td>637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:testrunner.CucumberTestRunners@1ca3b418]">runScenario</td> 
+  <td>main@1551446957</td>   <td></td> </tr>
 </table>
